--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="style.css" rel="stylesheet">
-    <title>Light Out</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link href="style.css" rel="stylesheet">
+	<title>Light Out</title>
 </head>
 <body>
-    <h1 id="title">Light Out 關燈遊戲</h1>
-    <table id="game">
-    </table>
-    <script src="script.js"></script>
+	<h1 id="title">Light Out 關燈遊戲</h1>
+	<table id="game"></table>
+	<script src="script.js"></script>
 </body>
 </html>
